# lab-11

./: .gitignore  .travis.yml  CMakeLists.txt
include/: builder.hpp  constants.hpp
scripts/: checks.sh
sources/: builder.cpp  main.cpp
